--- a/modules/arima/2readsbamcombiner/meta.yml
+++ b/modules/arima/2readsbamcombiner/meta.yml
@@ -8,7 +8,7 @@ keywords:
   - arima
 tools:
   - arima:
-      description: Combin paired subgke read bam files into one sorted bam using Samtools and Perl script
+      description: Combine paired single read bam files into one sorted bam using Samtools and Perl script
       homepage: https://arimagenomics.com/
       documentation: https://usermanual.wiki/Document/ArimaMappingUserGuideA160156v01.424413804/view
       tool_dev_url: https://github.com/ArimaGenomics/mapping_pipeline/blob/master/two_read_bam_combiner.pl
