--- a/modules/arima/2readsbamcombiner/meta.yml
+++ b/modules/arima/2readsbamcombiner/meta.yml
@@ -1,6 +1,6 @@
 name: arima_2readsbamcombiner
 
-description: Combin two paired single read bam files into one sorted bam
+description: Combine two paired single read bam files into one sorted bam
 keywords:
   - samtools
   - combine
