--- a/modules/arima/2readsbamcombiner/meta.yml
+++ b/modules/arima/2readsbamcombiner/meta.yml
@@ -10,7 +10,7 @@ tools:
   - arima:
       description: Combine paired single read bam files into one sorted bam using Samtools and Perl script
       homepage: https://arimagenomics.com/
-      documentation: https://usermanual.wiki/Document/ArimaMappingUserGuideA160156v01.424413804/view
+      documentation: https://github.com/ArimaGenomics/mapping_pipeline/blob/master/Arima_Mapping_UserGuide_A160156_v02.pdf
       tool_dev_url: https://github.com/ArimaGenomics/mapping_pipeline/blob/master/two_read_bam_combiner.pl
 
 input:
