--- a/modules/arima/2readsbamcombiner/meta.yml
+++ b/modules/arima/2readsbamcombiner/meta.yml
@@ -12,6 +12,7 @@ tools:
       homepage: https://arimagenomics.com/
       documentation: https://github.com/ArimaGenomics/mapping_pipeline/blob/master/Arima_Mapping_UserGuide_A160156_v02.pdf
       tool_dev_url: https://github.com/ArimaGenomics/mapping_pipeline/blob/master/two_read_bam_combiner.pl
+      licence: MIT
 
 input:
   - meta:
