List "bam" too since it's done in almost every other module

--- a/modules/arima/2readsbamcombiner/meta.yml
+++ b/modules/arima/2readsbamcombiner/meta.yml
@@ -2,6 +2,7 @@ name: arima_2readsbamcombiner
 
 description: Combine two paired single read bam files into one sorted bam
 keywords:
+  - bam
   - samtools
   - combine
   - sort
