Longranger Module: Added files in unit tests modules, fixed default parameters settings in tests and in the module

--- a/tests/modules/longranger/align/test.yml
+++ b/tests/modules/longranger/align/test.yml
@@ -3,7 +3,12 @@
   tags:
     - longranger
     - longranger/align
-#DOWNLOADED FROM WEB
-#  files:
-#    - path: output/longranger/test.bam
-#      md5sum: e667c7caad0bc4b7ac383fd023c654fc
+  files:
+    - path: output/longranger/pEimTen1/outs/possorted_bam.bam
+      md5sum: 741629ebd46fd019ef686d55d74ec0f7
+    - path: output/longranger/pEimTen1/outs/possorted_bam.bam.bai
+      md5sum: 029fec0ac0c846b5a4e8935bcab4eae4
+    - path: output/longranger/pEimTen1/outs/summary.csv
+      md5sum: b91a17df2ef65e3015fa2a229bd72aee
+    - path: output/longranger/versions.yml
+      md5sum: 9ace336820bfe317bcc7291a660b45c9
