--- a/tests/modules/longranger/mkref/test.yml
+++ b/tests/modules/longranger/mkref/test.yml
@@ -3,7 +3,24 @@
   tags:
     - longranger
     - longranger/mkref
-#DOWNLOADED FROM WEB
-#  files:
-#    - path: output/longranger/test.bam
-#      md5sum: e667c7caad0bc4b7ac383fd023c654fc
+  files:
+    - path: output/longranger/refdata-pEimTen1.contigs/fasta/genome.fa
+      md5sum: ed4b0cdee98a0c86aa47382430d40708 
+    - path: output/longranger/refdata-pEimTen1.contigs/fasta/genome.fa.pac
+      md5sum: 5ec9e29d8541c85720058dcfdb7b9716
+    - path: output/longranger/refdata-pEimTen1.contigs/fasta/genome.fa.fai
+      md5sum: fd079784ad008806e4568549240a3225
+    - path: output/longranger/refdata-pEimTen1.contigs/fasta/genome.fa.ann
+      md5sum: 635f4758e786ea7c1a1c32d9e56ac4a6
+    - path: output/longranger/refdata-pEimTen1.contigs/fasta/genome.fa.flat
+      md5sum: 4d61d65371e2dee481b70a84c77b3381
+    - path: output/longranger/refdata-pEimTen1.contigs/fasta/genome.fa.gdx
+      md5sum: 677a0f98051076ac79b05b0a39d06924
+    - path: output/longranger/refdata-pEimTen1.contigs/fasta/genome.fa.sa
+      md5sum: d007808f42abcef3999d5215c149dea2
+    - path: output/longranger/refdata-pEimTen1.contigs/fasta/genome.fa.bwt
+      md5sum: a32bca2a089b72e3469af7e181f67115
+    - path: output/longranger/refdata-pEimTen1.contigs/fasta/genome.fa.amb
+      md5sum: 204f3762875e5bf4002a2109763e4078
+    - path: output/longranger/versions.yml
+      md5sum: 773ed3f19d93079168fa028a220b3bf9
