--- a/tests/modules/longranger/align/nextflow.config
+++ b/tests/modules/longranger/align/nextflow.config
@@ -1,5 +1,5 @@
 process {
-
+    ext.args = "--disable-ui --nopreflight"
     publishDir = { "${params.outdir}/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" }
     
 }
