Longranger Module: changed passing of sample parameter in longranger align

--- a/modules/longranger/align/meta.yml
+++ b/modules/longranger/align/meta.yml
@@ -18,11 +18,7 @@ input:
       type: map
       description: |
         Groovy Map containing sample information
-        e.g. [ id:'test', single_end:false ]
-  - sample:
-      type: string
-      description: species name corresponding to 10X files prefix
-                    e.g. pEimTen1
+        e.g. [ id:'pEimTen1' ]
   - fastqs:
       type: path
       description: folder to 10X fastq files 
