--- a/modules/longranger/align/meta.yml
+++ b/modules/longranger/align/meta.yml
@@ -32,7 +32,7 @@ output:
       type: map
       description: |
         Groovy Map containing sample information
-        e.g. [ id:'test', single_end:false ]
+        e.g. [ id:'pEimTen1' ]
   - versions:
       type: file
       description: File containing software versions
