Uploaded all the data to s3://tolit/test-data

--- a/tests/config/test_data.config
+++ b/tests/config/test_data.config
@@ -1,6 +1,6 @@
 // Base directory for test data
 def test_data_dir = "https://raw.githubusercontent.com/nf-core/test-datasets/modules/data"
-def tol_test_data_dir = "https://tol-test-data.cog.sanger.ac.uk/data"
+def tol_test_data_dir = "https://tolit.cog.sanger.ac.uk/test-data"
 
 params {
     test_data {
