--- a/tests/modules/longranger/align/martian.lsf.template
+++ b/tests/modules/longranger/align/martian.lsf.template
@@ -7,12 +7,10 @@
 # Setup Instructions
 # =============================================================================
 #
-# 1. Add any other necessary LSF arguments such as queue (-q) or account (-P).
+#    Add any other necessary LSF arguments such as queue (-q) or account (-P).
 #    If your system requires a walltime (-W), 24 hours (24:00) is sufficient.
 #    We recommend you do not remove any arguments below or Martian may not run
 #    properly.
-#
-# 2. Change filename of lsf.template.example to lsf.template.
 #
 # =============================================================================
 # Template
