--- a/tests/modules/longranger/align/nextflow.config
+++ b/tests/modules/longranger/align/nextflow.config
@@ -8,9 +8,10 @@ singularity {
     // Enter here the necessary configuration for the Singularity container
     // to see your HPC cluster. These options will have to be inserted in the
     // pipeline's configuration.
-    // Below is a working example for LSF at the Sanger institute: just change
-    // the path to martian.lsf.template (which you don't need to edit), and
+    // Below is a working example for LSF at the Sanger institute. The file
+    // named martian.lsf.template has to be shipped with the pipeline (update
+    // its relative path to the pipeline's root directory ${projectDir}), and
     // possibly change the path of the singularity binary.
     envWhitelist = "LSF_BINDIR,LSF_SERVERDIR,LSF_LIBDIR,LSF_ENVDIR"
-    runOptions = "-B /path/to/martian.lsf.template:/opt/longranger-2.2.2/martian-cs/2.3.2/jobmanagers/lsf.template -B /software -B /etc/lsf.conf --env APPEND_PATH=$LSF_BINDIR:$LSF_SERVERDIR:/software/singularity-v3.9.0/bin"
+    runOptions = "-B ${projectDir}/martian.lsf.template:/opt/longranger-2.2.2/martian-cs/2.3.2/jobmanagers/lsf.template -B /software -B /etc/lsf.conf --env APPEND_PATH=$LSF_BINDIR:$LSF_SERVERDIR:/software/singularity-v3.9.0/bin"
 }
