--- a/modules/fastk/fastk/meta.yml
+++ b/modules/fastk/fastk/meta.yml
@@ -26,20 +26,27 @@ input:
     type: value
     description: the size/length of kmer
 
-  - FASTKDB:
-    type: value
-    description: the specific folder to contain the fastk output
-
 output:
   - meta:
       type: map
       description: |
         Groovy Map containing sample information
         e.g. [ id:'test', single_end:false ]
+
   - hist:
       type: file
       description: fastk kmer database
       pattern: "*.hist"
+
+  - ktab:
+      type: file
+      description: A sorted table of all canonical k‑mers along with their counts.
+      pattern: "*.ktab"
+
+  - prof:
+      type: file
+      description: A k‑mer count profile of each sequence in the input data set.
+      pattern: "*.prof"
   - versions:
       type: file
       description: File containing software versions
