Use different docker image when run using GITHUB_ACTION, and make the module work using Docker as well

--- a/tests/config/pytest_modules.yml
+++ b/tests/config/pytest_modules.yml
@@ -5,3 +5,7 @@ arima/2readsbamcombiner:
 arima/filterfiveend:
   - modules/arima/filterfiveend/**
   - tests/modules/arima/filterfiveend/**
+
+longranger/align:
+  - modules/longranger/align/**
+  - tests/modules/longranger/align/**
