--- a/tests/config/pytest_modules.yml
+++ b/tests/config/pytest_modules.yml
@@ -1346,6 +1346,10 @@ longranger/align:
   - modules/longranger/align/**
   - tests/modules/longranger/align/**
 
+longranger/mkref:
+  - modules/longranger/mkref/**
+  - tests/modules/longranger/mkref/**
+
 macrel/contigs:
   - modules/macrel/contigs/**
   - tests/modules/macrel/contigs/**
