--- a/tests/config/pytest_modules.yml
+++ b/tests/config/pytest_modules.yml
@@ -9,3 +9,7 @@ arima/filterfiveend:
 longranger/align:
   - modules/longranger/align/**
   - tests/modules/longranger/align/**
+
+longranger/mkref:
+  - modules/longranger/mkref/**
+  - tests/modules/longranger/mkref/**
