--- a/tests/config/pytest_modules.yml
+++ b/tests/config/pytest_modules.yml
@@ -1362,6 +1362,10 @@ mafft:
   - modules/mafft/**
   - tests/modules/mafft/**
 
+makecmap/makecmap:
+  - modules/makecmap/makecmap/**
+  - tests/modules/makecmap/makecmap/**
+
 malt/build:
   - modules/malt/build/**
   - tests/modules/malt/build_test/**
