--- a/tests/config/pytest_modules.yml
+++ b/tests/config/pytest_modules.yml
@@ -13,3 +13,7 @@ longranger/align:
 longranger/mkref:
   - modules/longranger/mkref/**
   - tests/modules/longranger/mkref/**
+
+makecmap/makecmap:
+  - modules/makecmap/makecmap/**
+  - tests/modules/makecmap/makecmap/**
