--- a/tests/config/pytest_modules.yml
+++ b/tests/config/pytest_modules.yml
@@ -1362,9 +1362,9 @@ mafft:
   - modules/mafft/**
   - tests/modules/mafft/**
 
-makecmap/makecmap:
-  - modules/makecmap/makecmap/**
-  - tests/modules/makecmap/makecmap/**
+makecmap/fa2cmapmulticolor:
+  - modules/makecmap/fa2cmapmulticolor/**
+  - tests/modules/makecmap/fa2cmapmulticolor/**
 
 malt/build:
   - modules/malt/build/**
