--- a/tests/config/pytest_modules.yml
+++ b/tests/config/pytest_modules.yml
@@ -14,6 +14,10 @@ longranger/mkref:
   - modules/longranger/mkref/**
   - tests/modules/longranger/mkref/**
 
+makecmap/fa2cmapmulticolor:
+  - modules/makecmap/fa2cmapmulticolor/**
+  - tests/modules/makecmap/fa2cmapmulticolor/**
+
 makecmap/makecmap:
   - modules/makecmap/makecmap/**
   - tests/modules/makecmap/makecmap/**
