use the test data from s3 not local

--- a/tests/config/test_data.config
+++ b/tests/config/test_data.config
@@ -516,6 +516,12 @@ params {
                     canu_contigs_longranger_mkref_targz            = "${tol_test_data_dir}/Eimeria_tenella/working/pEimTen1.canu.20190919/refdata-pEimTen1.contigs.tar.gz"
                 }
             }
+            'Mucor_piriformis' {
+                'genomic_data' {
+                    bionano_cmap                                   = "${tol_test_data_dir}/Mucor_piriformis/genomic_data/gzMucPiri1/bionano/gzMucPiri1_DLE1.cmap"
+                    bionano_key                                    = "${tol_test_data_dir}/Mucor_piriformis/genomic_data/gzMucPiri1/bionano/gzMucPiri1_DLE1_key.txt"
+                }
+            }
         }
 
         // real files from medium-size genomes (between 100 Mb and 1 GB)
