PretextMap module: Update test to use ToL test data path

--- a/tests/config/test_data.config
+++ b/tests/config/test_data.config
@@ -517,6 +517,8 @@ params {
                 'assembly' {
                     canu_contigs_fasta                             = "${tol_test_data_dir}/Eimeria_tenella/working/pEimTen1.canu.20190919/pEimTen1.contigs.fasta"
                     canu_contigs_longranger_mkref_targz            = "${tol_test_data_dir}/Eimeria_tenella/working/pEimTen1.canu.20190919/refdata-pEimTen1.contigs.tar.gz"
+                    alignments_sorted                              = "${tol_test_data_dir}/Eimeria_tenella/working/pEimTen1.scaff/alignments_sorted.txt"
+                    scaffolds_fai                                  = "${tol_test_data_dir}/Eimeria_tenella/working/pEimTen1.scaff/scaffolds_FINAL.fasta.fai"
                 }
             }
             'Mucor_piriformis' {
