--- a/tests/config/test_data.config
+++ b/tests/config/test_data.config
@@ -530,6 +530,18 @@ params {
                     bionano_key                                    = "${tol_test_data_dir}/Mucor_piriformis/genomic_data/gzMucPiri1/bionano/gzMucPiri1_DLE1_key.txt"
                 }
             }
+            'Oscheius_sp' {
+                'genomic_data' {
+                    'nxOscSpen2' {
+                        'selfcomp' {
+                            mummer_bed                             = "${tol_test_data_dir}/Oscheius_sp/genomic_data/nxOscSpen2/selfcomp/nxOscSpen2.bed"
+                            split_fasta                            = "${tol_test_data_dir}/Oscheius_sp/genomic_data/nxOscSpen2/selfcomp/nxOscSpen2_split.fa"
+                            split_agp                              = "${tol_test_data_dir}/Oscheius_sp/genomic_data/nxOscSpen2/selfcomp/nxOscSpen2_split.agp"
+                            mummer_file                            = "${tol_test_data_dir}/Oscheius_sp/genomic_data/nxOscSpen2/selfcomp/nxOscSpen2.mummer"
+                        }
+                    }
+                }
+            }
         }
 
         // real files from medium-size genomes (between 100 Mb and 1 GB)
