Remove additional modules

--- a/tests/config/pytest_modules.yml
+++ b/tests/config/pytest_modules.yml
@@ -2023,10 +2023,6 @@ selfcomp/mapids:
   - modules/selfcomp/mapids/**
   - tests/modules/selfcomp/mapids/**
 
-selfcomp/mummer2bed:
-  - modules/selfcomp/mummer2bed/**
-  - tests/modules/selfcomp/mummer2bed/**
-
 selfcomp/splitfasta:
   - modules/selfcomp/splitfasta/**
   - tests/modules/selfcomp/splitfasta/**
@@ -2259,9 +2255,9 @@ trimmomatic:
   - modules/trimmomatic/**
   - tests/modules/trimmomatic/**
 
-ucsc/bedtobigbed:
-  - modules/ucsc/bedtobigbed/**
-  - tests/modules/ucsc/bedtobigbed/**
+ucsc/bed12tobigbed:
+  - modules/ucsc/bed12tobigbed/**
+  - tests/modules/ucsc/bed12tobigbed/**
 
 ucsc/bedclip:
   - modules/ucsc/bedclip/**
