--- a/tests/config/test_data.config
+++ b/tests/config/test_data.config
@@ -450,6 +450,13 @@ params {
                     bionano_key                                    = "${tol_test_data_dir}/Mucor_piriformis/genomic_data/gzMucPiri1/bionano/gzMucPiri1_DLE1_key.txt"
                 }
             }
+            'Gae_host' {
+                'genomic_data' {
+                    'pep' {
+                            pep_seq                           = "${tol_test_data_dir}/Gae_host/genomic_data/pep/Gae_host_pep.fa"
+                        }
+                }
+            }
             'Oscheius_sp' {
                 'genomic_data' {
                     'nxOscSpen2' {
