--- a/tests/config/test_data.config
+++ b/tests/config/test_data.config
@@ -533,8 +533,11 @@ params {
             'Gae_host' {
                 'genomic_data' {
                     'pep' {
-                            pep_seq                           = "${tol_test_data_dir}/Gae_host/genomic_data/pep/Gae_host_pep.fa"
+                            pep_seq                                = "${tol_test_data_dir}/Gae_host/genomic_data/pep/Gae_host_pep.fa"
                         }
+                    'blast' {
+                            blast_tsv                              = "${tol_test_data_dir}/Gae_host/genomic_data/blast/Gae_host.Gae-rna-final_blast.tsv"
+                    }
                 }
             }
             'Oscheius_sp' {
