--- a/tests/config/test_data.config
+++ b/tests/config/test_data.config
@@ -536,8 +536,8 @@ params {
                             pep_seq                                = "${tol_test_data_dir}/Gae_host/genomic_data/pep/Gae_host_pep.fa"
                         }
                     'blast' {
-                            blast_tsv                              = "${tol_test_data_dir}/Gae_host/genomic_data/blast/Gae_host.Gae-rna-final_blast.tsv"
-                    }
+                            blast_tsv                               = "${tol_test_data_dir}/Gae_host/genomic_data/pep/Gae_host_pep.fa"
+                        }
                 }
             }
             'Oscheius_sp' {
