--- a/tests/modules/blast/filterblast/test.yml
+++ b/tests/modules/blast/filterblast/test.yml
@@ -1,14 +1,10 @@
-## TODO nf-core: Please run the following command to build this file:
-#                nf-core modules create-test-yml blast/filterblast
 - name: "blast filterblast"
   command: nextflow run ./tests/modules/blast/filterblast -entry test_blast_filterblast -c ./tests/config/nextflow.config -c ./tests/modules/blast/filterblast/nextflow.config
   tags:
     - "blast"
-    #
     - "blast/filterblast"
-    #
   files:
-    - path: "output/blast/test.bam"
-      md5sum: e667c7caad0bc4b7ac383fd023c654fc
+    - path: "output/blast/test-null-filtered90.tsv"
+      md5sum: d41d8cd98f00b204e9800998ecf8427e
     - path: output/blast/versions.yml
-      md5sum: a01fe51bc4c6a3a6226fbf77b2c7cf3b
+      md5sum: 5f55b10ba9d1721b0b5705d7f8aa5c19
