--- a/modules/blast/filterblast/meta.yml
+++ b/modules/blast/filterblast/meta.yml
@@ -11,7 +11,7 @@ input:
       type: map
       description: |
         Groovy Map containing sample information
-  - concat_blast_out:
+  - blastout:
       type: file
       description: outfmt 6 output from blastn/tblastn
       pattern: "*.{*}"
