--- a/tests/modules/miniprot/index/test.yml
+++ b/tests/modules/miniprot/index/test.yml
@@ -4,7 +4,7 @@
     - miniprot
     - miniprot/index
   files:
-    - path: ./output/miniprot/genome.mpi
+    - path: output/miniprot/nxOscSpef2.mpi
       md5sum: ec3d98dc989e73873afe5b529c84c022
     - path: output/miniprot/versions.yml
       md5sum: b191a09118135126e3da7080ad64983d
