Adding module for miniprot_index. Closes #1. (#29)
* Adding module for miniprot_index. Closes #1.

* Adding module for miniprot_index. Closes #1.

* Adding module for miniprot_index. Closes #1.

* Adding module for miniprot_index. Closes #1.

* Adding module for miniprot_index. Closes #1.

* Adding module for miniprot_index. Closes #1.

* update the wrong file name

* put back the test data path

* change index file name

Co-authored-by: Guoying Qi <gq2@sanger.ac.uk>

--- a/tests/config/test_data.config
+++ b/tests/config/test_data.config
@@ -554,6 +554,9 @@ params {
                 }
             }
             'Oscheius_sp' {
+                'assembly'{
+                    assembly_fasta                                 ="${tol_test_data_dir}/Oscheius_sp/assembly//nxOscSpef2.fasta"                        
+                }
                 'genomic_data' {
                     'nxOscSpen2' {
                         'selfcomp' {
