--- a/tests/config/pytest_modules.yml
+++ b/tests/config/pytest_modules.yml
@@ -34,6 +34,10 @@ makecmap/renamecmapids:
   - modules/makecmap/renamecmapids/**
   - tests/modules/makecmap/renamecmapids/**
 
+miniprot/index:
+  - modules/miniprot/index/**
+  - tests/modules/miniprot/index/**
+
 selfcomp/mummer2bed:
   - modules/selfcomp/mummer2bed/**
   - tests/modules/selfcomp/mummer2bed/**
