--- a/tests/modules/miniprot/align/test.yml
+++ b/tests/modules/miniprot/align/test.yml
@@ -1,5 +1,5 @@
-- name: miniprot align
-  command: nextflow run ./tests/modules/miniprot/align -entry test_miniprot_align -c ./tests/config/nextflow.config -c ./tests/modules/miniprot/align/nextflow.config
+- name: miniprot align test_miniprot_align_gff
+  command: nextflow run ./tests/modules/miniprot/align -entry test_miniprot_align_gff -c ./tests/config/nextflow.config -c ./tests/modules/miniprot/align/nextflow.config
   tags:
     - miniprot
     - miniprot/align
@@ -9,4 +9,17 @@
     - path: output/miniprot/test.gff
       md5sum: dc2d01ac840ee26416b5eb9cf252181d
     - path: output/miniprot/versions.yml
-      md5sum: 961576dd5637c8636e0d39a5dc63a134
+      md5sum: 25e86c616466985a3012658f64a9868b
+
+- name: miniprot align test_miniprot_align_paf
+  command: nextflow run ./tests/modules/miniprot/align -entry test_miniprot_align_paf -c ./tests/config/nextflow.config -c ./tests/modules/miniprot/align/nextflow.config
+  tags:
+    - miniprot
+    - miniprot/align
+  files:
+    - path: output/miniprot/genome.mpi
+      md5sum: bf4f59376dc00f758b69706f38b4f650
+    - path: output/miniprot/test.paf
+      md5sum: f2b40da6a9605df44efc9df14b255b53
+    - path: output/miniprot/versions.yml
+      md5sum: 80ec5877c67aaa0b86cdda26d242814c
