Adding module for miniprot/align (#31)
* Adding module for miniprot/align. Closes #1

* Adding module for miniprot/align. Closes #1

* Adding module for <software/tool>. Closes #<issue_number>.

* removed gtf flag from main.nf and meta.yml

* removed gtf flag from main.nf and meta.yml

* incorporate comments

* incorporate comments

--- a/tests/config/pytest_modules.yml
+++ b/tests/config/pytest_modules.yml
@@ -34,6 +34,10 @@ makecmap/renamecmapids:
   - modules/makecmap/renamecmapids/**
   - tests/modules/makecmap/renamecmapids/**
 
+miniprot/align:
+  - modules/miniprot/align/**
+  - tests/modules/miniprot/align/**
+
 miniprot/index:
   - modules/miniprot/index/**
   - tests/modules/miniprot/index/**
