--- a/tests/config/test_data.config
+++ b/tests/config/test_data.config
@@ -471,6 +471,20 @@ params {
                     }
                 }
             }
+            'Leptidea_sinapis' {
+                'assembly'{
+                    assembly_fasta                                 ="${tol_test_data_dir}/Leptidea_sinapis/assembly/ilLepSina1_1.fa"                        
+                }
+                'genomic_data' {
+                    'ilLepSina1' {
+                        'busco' {
+                            buscopaintedfile                       = "${tol_test_data_dir}/Leptidea_sinapis/genomic_data/ilLepSina1/busco/buscopainter_complete_location.tsv"
+                            ancestral_units                        = "${tol_test_data_dir}/Leptidea_sinapis/genomic_data/ilLepSina1/busco/lep_ancestral_units.tsv"
+                            full_table                             = "${tol_test_data_dir}/Leptidea_sinapis/genomic_data/ilLepSina1/busco/ilLepSina1_full_table.tsv"
+                        }
+                    }
+                }
+            }
         }
 
         // real files from medium-size genomes (between 100 Mb and 1 GB)
