Adding module for buscoannotation/buscopainterlep. Closes #34.

--- a/tests/config/pytest_modules.yml
+++ b/tests/config/pytest_modules.yml
@@ -437,6 +437,10 @@ buscoannotation/assignancestral:
   - modules/buscoannotation/assignancestral/**
   - tests/modules/buscoannotation/assignancestral/**
 
+buscoannotation/buscopainterlep:
+  - modules/buscoannotation/buscopainterlep/**
+  - tests/modules/buscoannotation/buscopainterlep/**
+
 bwa/aln:
   - modules/bwa/aln/**
   - tests/modules/bwa/aln/**
