--- a/tests/config/pytest_modules.yml
+++ b/tests/config/pytest_modules.yml
@@ -437,6 +437,10 @@ buscoannotation/assignancestral:
   - modules/buscoannotation/assignancestral/**
   - tests/modules/buscoannotation/assignancestral/**
 
+buscoannotation/getbuscogene:
+  - modules/buscoannotation/getbuscogene/**
+  - tests/modules/buscoannotation/getbuscogene/**
+
 bwa/aln:
   - modules/bwa/aln/**
   - tests/modules/bwa/aln/**
