--- a/tests/config/pytest_modules.yml
+++ b/tests/config/pytest_modules.yml
@@ -18,6 +18,10 @@ buscoannotation/assignancestral:
   - modules/buscoannotation/assignancestral/**
   - tests/modules/buscoannotation/assignancestral/**
 
+buscoannotation/buscopainterlep:
+  - modules/buscoannotation/buscopainterlep/**
+  - tests/modules/buscoannotation/buscopainterlep/**
+
 longranger/align:
   - modules/longranger/align/**
   - tests/modules/longranger/align/**
