Adding modules for buscoannotation/getbuscogene. Closes #33. (#39)
* Adding modules for buscoannotation/getbuscogene. Closes #33.

* Fixes for merge

* Remove whitespace

* Fix md5sum

* Add missing new line

* Adding module for buscoannotation/buscopainterlep. Closes #34. (#37)

* Adding module for buscoannotation/buscopainterlep. Closes #34.

* Fixes issues for merge

* Adding modules for buscoannotation/getbuscogene. Closes #33.

* Fixes for merge

* Remove whitespace

* Fix md5sum

* Add missing new line

* Prettier

--- a/tests/config/pytest_modules.yml
+++ b/tests/config/pytest_modules.yml
@@ -22,6 +22,10 @@ buscoannotation/buscopainterlep:
   - modules/buscoannotation/buscopainterlep/**
   - tests/modules/buscoannotation/buscopainterlep/**
 
+buscoannotation/getbuscogene:
+  - modules/buscoannotation/getbuscogene/**
+  - tests/modules/buscoannotation/getbuscogene/**
+
 longranger/align:
   - modules/longranger/align/**
   - tests/modules/longranger/align/**
