--- a/tests/config/pytest_modules.yml
+++ b/tests/config/pytest_modules.yml
@@ -441,6 +441,10 @@ buscoannotation/buscopainterlep:
   - modules/buscoannotation/buscopainterlep/**
   - tests/modules/buscoannotation/buscopainterlep/**
 
+buscoannotation/getbuscogene:
+  - modules/buscoannotation/getbuscogene/**
+  - tests/modules/buscoannotation/getbuscogene/**
+
 bwa/aln:
   - modules/bwa/aln/**
   - tests/modules/bwa/aln/**
