FEAT: Add cramalign/chunks module

--- a/tests/config/test_data.config
+++ b/tests/config/test_data.config
@@ -3,7 +3,7 @@
 
 params {
     // Base directory for test data
-    test_data_base = "https://raw.githubusercontent.com/nf-core/test-datasets/modules"
+    test_data_base = "https://tolit.cog.sanger.ac.uk/test-data/"
 
     test_data {
         'sarscov2' {
