--- a/tests/config/nextflow.config
+++ b/tests/config/nextflow.config
@@ -2,7 +2,7 @@ params {
     outdir = "output/"
     publish_dir_mode = "copy"
     singularity_pull_docker_container = false
-    test_data_base = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules'
+    test_data_base = 'https://tolit.cog.sanger.ac.uk/test-data/'
 }
 
 process {
