--- a/modules/sanger-tol/hiccramalign/bwamem2align/meta.yml
+++ b/modules/sanger-tol/hiccramalign/bwamem2align/meta.yml
@@ -1,24 +1,35 @@
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/meta-schema.json
 name: "hiccramalign_bwamem2align"
-## TODO nf-core: Add a description of the module and list keywords
-description: write your description here
+description: |
+  Aligns a subset of Hi-C reads from a CRAM file to a reference genome using bwa-mem2,
+  pipes the resulting alignments through samtools fixmate and samtools sort, outputting
+  an alignment in BAM format.
 keywords:
   - sort
   - example
   - genomics
 tools:
-  - "cramalign":
-      ## TODO nf-core: Add a description and other details for the software below
-      description: "Tools for dealing with SAM, BAM and CRAM files"
-      homepage: "None"
-      documentation: "None"
-      tool_dev_url: "None"
-      doi: ""
+  - samtools:
+      description: |
+        SAMtools is a set of utilities for interacting with and post-processing
+        short DNA sequence read alignments in the SAM, BAM and CRAM formats, written by Heng Li.
+        These files are generated as output by short read aligners like BWA.
+      homepage: http://www.htslib.org/
+      documentation: http://www.htslib.org/doc/samtools.html
+      doi: 10.1093/bioinformatics/btp352
       licence: ["MIT"]
       identifier: biotools:samtools
+  - bwa:
+      description: |
+        BWA-mem2 is a software package for mapping DNA sequences against
+        a large reference genome, such as the human genome.
+      homepage: https://github.com/bwa-mem2/bwa-mem2
+      documentation: http://www.htslib.org/doc/samtools.html
+      arxiv: arXiv:1303.3997
+      licence: ["MIT"]
+      identifier: "biotools:bwa-mem2"
 
-## TODO nf-core: Add a description of all of the variables used as input
 input:
   - - meta:
         type: map
@@ -26,35 +37,52 @@ input:
           Groovy Map containing sample information
           e.g. `[ id:'sample1' ]`
 
-    - sequence_trace:
-        # TODO nf-core: Update the information obtained from bio.tools and make sure that it is correct
+    - cram:
         type: file
-        description: sequence_trace file
-        pattern: "*.{bam,sam,cram}"
+        description: CRAM file containing Hi-C sequences to align
+        pattern: "*.cram"
         ontologies:
-          - edam: "http://edamontology.org/data_0924" # Sequence trace
-          - edam: "http://edamontology.org/format_2572" # BAM
-          - edam: "http://edamontology.org/format_2573" # SAM
           - edam: "http://edamontology.org/format_3462" # CRAM
 
-## TODO nf-core: Add a description of all of the variables used as output
+    - crai:
+        type: file
+        description: CRAM index file
+        pattern: "*.crai"
+        ontologies:
+          - edam: "http://edamontology.org/format_3475" # TSV
+
+    - chunkn:
+        type: integer
+        description: Integer index of CRAM chunk to map
+
+    - range:
+        type: list
+        description: Start and end indices defining CRAM slices to align
+
+    - index:
+        type: file
+        description: bwa-mem2 index of the reference to be aligned to
+
+    - reference:
+        type: file
+        description: FASTA file containing reference for alignment
+        pattern: "*.fasta(.gz)?"
+        ontologies:
+          - edam: http://edamontology.org/format_1929 # FASTA
+
 output:
-  - sequence_trace:
+  - bam:
       - meta:
           type: map
           description: |
             Groovy Map containing sample information
             e.g. `[ id:'sample1' ]`
-      - "*.{bam,sam,cram}":
-          # TODO nf-core: Update the information obtained from bio.tools and make sure that it is correct
+      - "*.bam":
           type: file
-          description: sequence_trace file
-          pattern: "*.{bam,sam,cram}"
+          description: BAM file of mapped Hi-C sequences
+          pattern: "*.bam"
           ontologies:
-            - edam: "http://edamontology.org/data_0924" # Sequence trace
             - edam: "http://edamontology.org/format_2572" # BAM
-            - edam: "http://edamontology.org/format_2573" # SAM
-            - edam: "http://edamontology.org/format_3462" # CRAM
 
   - versions:
       - "versions.yml":
@@ -63,6 +91,7 @@ output:
           pattern: "versions.yml"
 
 authors:
+  - "@yumisims"
   - "@prototaxites"
 maintainers:
   - "@prototaxites"
