fix(module): bump memory for test

--- a/modules/sanger-tol/hiccramalign/bwamem2align/tests/nextflow.config
+++ b/modules/sanger-tol/hiccramalign/bwamem2align/tests/nextflow.config
@@ -1,6 +1,7 @@
 process {
     withName: HICCRAMALIGN_BWAMEM2ALIGN {
-        ext.args =  { "${params.samtools_cat_args}"     }
+        memory   =  16.Gb
+        ext.args1 = { "${params.samtools_cat_args}"     }
         ext.args2 = { "${params.samtools_fastq_args}"   }
         ext.args3 = { "${params.bwamem2_mem_args}"      }
         ext.args4 = { "${params.samtools_fixmate_args}" }
