--- a/modules/sanger-tol/hiccramalign/bwamem2align/tests/nextflow.config
+++ b/modules/sanger-tol/hiccramalign/bwamem2align/tests/nextflow.config
@@ -1,6 +1,9 @@
 process {
+    withName: BWAMEM2_INDEX {
+        memory   =  15.Gb
+    }
+
     withName: HICCRAMALIGN_BWAMEM2ALIGN {
-        memory   =  16.Gb
         ext.args1 = { "${params.samtools_cat_args}"     }
         ext.args2 = { "${params.samtools_fastq_args}"   }
         ext.args3 = { "${params.bwamem2_mem_args}"      }
