--- a/modules/sanger-tol/hiccramalign/minimap2align/environment.yml
+++ b/modules/sanger-tol/hiccramalign/minimap2align/environment.yml
@@ -4,5 +4,6 @@ channels:
 
 dependencies:
   - bioconda::minimap2=2.30
+  - bioconda::htslib=1.22
   - bioconda::samtools=1.22
   - conda-forge::perl=5.32.1
