--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,10 @@ test_output/
 tests/data/
 work/
 .github/CODEOWNERS-tmp
+modules/nf-core/
+modules/sanger-tol/**/.nf-core.yml
+modules/sanger-tol/**/modules.json
+modules/sanger-tol/**/modules
+subworkflows/sanger-tol/**/.nf-core.yml
+subworkflows/sanger-tol/**/modules.json
+subworkflows/sanger-tol/**/modules
