--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -347,6 +347,17 @@ jobs:
       - name: Setup Nextflow
         uses: nf-core/setup-nextflow@v2
 
+      - name: Set up Python
+        uses: actions/setup-python@f677139bbe7f9c59b41e40162b753c062f5d49a3 # v5
+        with:
+          python-version: "3.11"
+
+      - name: Install pip
+        run: python -m pip install --upgrade pip
+
+      - name: Install nf-core tools development version
+        run: python -m pip install --upgrade --force-reinstall git+https://github.com/nf-core/tools.git@dev
+
       - name: Install nf-test
         uses: nf-core/setup-nf-test@v1
         with:
