--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,7 @@ test_output/
 tests/data/
 work/
 .github/CODEOWNERS-tmp
-modules/nf-core/
-modules/nf-core/*
+modules/nf-core
 modules/sanger-tol/**/.nf-core.yml
 modules/sanger-tol/**/modules.json
 modules/sanger-tol/**/modules
