--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -419,6 +419,7 @@ jobs:
             --profile=${{ matrix.profile }} \
             --tap=test.tap \
             --verbose \
+            --plugins tests/nft-stagenfcore-0.1.0.jar \
             ${{ matrix.path }}
 
       - uses: pcolby/tap-summary@0959cbe1d4422e62afc65778cdaea6716c41d936 # v1
