--- a/nf-test.config
+++ b/nf-test.config
@@ -15,5 +15,6 @@ config {
     plugins {
         load "nft-bam@0.3.0"
         load "nft-vcf@1.0.7"
+        loadFromFile "tests/nft-stagenfcore-0.1.0.jar"
     }
 }
