--- a/subworkflows/sanger-tol/hic_mapping/meta.yml
+++ b/subworkflows/sanger-tol/hic_mapping/meta.yml
@@ -13,6 +13,12 @@ components:
   - samtools/faidx:
     org_path: nf-core
     git_remote: https://github.com/nf-core/modules.git
+  - samtools/merge:
+    org_path: nf-core
+    git_remote: https://github.com/nf-core/modules.git
+  - samtools/markdup:
+    org_path: nf-core
+    git_remote: https://github.com/nf-core/modules.git
   - bwamem2/index:
     org_path: nf-core
     git_remote: https://github.com/nf-core/modules.git
