feat(module): add explicit GNU awk dependency to minimap2align to ensure availablity of bitwise operations

--- a/subworkflows/sanger-tol/hic_mapping/nextflow.config
+++ b/subworkflows/sanger-tol/hic_mapping/nextflow.config
@@ -14,7 +14,7 @@ process {
     withName: HICCRAMALIGN_MINIMAP2ALIGN {
         ext.args1 = { ""                    }
         ext.args2 = { "-F0xB00 -nt"         }
-        ext.args3 = { "-ax sr --no-pairing" }
+        ext.args3 = { "-ax sr"              }
         ext.args4 = { "-mpu"                }
         ext.args5 = { "-q 0 -F 0x904"       }
         ext.args6 = { "--write-index -l1"   }
