--- a/modules/sanger-tol/hiccramalign/bwamem2align/meta.yml
+++ b/modules/sanger-tol/hiccramalign/bwamem2align/meta.yml
@@ -71,8 +71,8 @@ input:
           - edam: http://edamontology.org/format_1929 # FASTA
 
 output:
-  - bam:
-      - meta:
+  bam:
+    - - meta:
           type: map
           description: |
             Groovy Map containing sample information
@@ -84,11 +84,11 @@ output:
           ontologies:
             - edam: "http://edamontology.org/format_2572" # BAM
 
-  - versions:
-      - "versions.yml":
-          type: file
-          description: File containing software versions
-          pattern: "versions.yml"
+  versions:
+    - "versions.yml":
+        type: file
+        description: File containing software versions
+        pattern: "versions.yml"
 
 authors:
   - "@yumisims"
