--- a/modules/sanger-tol/hiccramalign/minimap2align/meta.yml
+++ b/modules/sanger-tol/hiccramalign/minimap2align/meta.yml
@@ -69,8 +69,8 @@ input:
         description: minimap2 index of the reference to be aligned to
 
 output:
-  - bam:
-      - meta:
+  bam:
+    - - meta:
           type: map
           description: |
             Groovy Map containing sample information
@@ -82,11 +82,11 @@ output:
           ontologies:
             - edam: "http://edamontology.org/format_2572" # BAM
 
-  - versions:
-      - "versions.yml":
-          type: file
-          description: File containing software versions
-          pattern: "versions.yml"
+  versions:
+    - "versions.yml":
+        type: file
+        description: File containing software versions
+        pattern: "versions.yml"
 
 authors:
   - "@prototaxites"
