--- a/modules/sanger-tol/hiccramalign/chunks/meta.yml
+++ b/modules/sanger-tol/hiccramalign/chunks/meta.yml
@@ -34,13 +34,13 @@ input:
         ontologies:
           - edam: "http://edamontology.org/format_3475" # TSV
 
-  - - cram_bin_size:
-        type: integer
-        description: Number of CRAM slices in each CRAM chunk
+  - cram_bin_size:
+      type: integer
+      description: Number of CRAM slices in each CRAM chunk
 
 output:
-  - cram_slices:
-      - meta:
+  cram_slices:
+    - - meta:
           type: map
           description: |
             Groovy Map containing sample information
@@ -66,11 +66,11 @@ output:
       - slices:
           type: list
           description: List containing the start and end slices of the CRAM chunk
-  - versions:
-      - versions.yml:
-          type: file
-          description: File containing software versions
-          pattern: "versions.yml"
+  versions:
+    - "versions.yml":
+        type: file
+        description: File containing software versions
+        pattern: "versions.yml"
 
 authors:
   - "@prototaxites"
