--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -171,7 +171,7 @@ jobs:
         run: python -m pip install --upgrade --force-reinstall git+https://github.com/nf-core/tools.git@dev
 
       - name: Lint module ${{ matrix.tags }}
-        run: nf-core modules lint ${{ matrix.tags }}
+        run: nf-core modules --git-remote https://github.com/sanger-tol/nf-core-modules.git lint ${{ matrix.tags }}
 
   nf-core-lint-subworkflows:
     runs-on: ubuntu-latest
@@ -209,7 +209,7 @@ jobs:
         run: python -m pip install --upgrade --force-reinstall git+https://github.com/nf-core/tools.git@dev
 
       - name: Lint module ${{ matrix.tags }}
-        run: nf-core subworkflows lint ${{ matrix.tags }}
+        run: nf-core subworkflows --git-remote https://github.com/sanger-tol/nf-core-modules.git lint ${{ matrix.tags }}
 
   pytest:
     runs-on: ubuntu-latest
