fix(bamtobed): fix test

--- a/modules/sanger-tol/bedtools/bamtobedsort/tests/nextflow.config
+++ b/modules/sanger-tol/bedtools/bamtobedsort/tests/nextflow.config
@@ -1,6 +1,6 @@
 process {
     withName: BEDTOOLS_BAMTOBEDSORT {
-        ext.args  = params.samtools_view_args
+        ext.args1 = params.samtools_view_args
         ext.args3 = params.sort_args
     }
 }
