--- a/modules/sanger-tol/yahs/makepairsfile/environment.yml
+++ b/modules/sanger-tol/yahs/makepairsfile/environment.yml
@@ -1,3 +1,5 @@
+---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/sanger-tol/modules/master/modules/environment-schema.json
 channels:
   - conda-forge
   - bioconda
