--- a/modules/sanger-tol/bedtools/bamtobedsort/environment.yml
+++ b/modules/sanger-tol/bedtools/bamtobedsort/environment.yml
@@ -1,7 +1,8 @@
+---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/sanger-tol/modules/master/modules/environment-schema.json
 channels:
   - conda-forge
   - bioconda
-
 dependencies:
   - bioconda::bedtools=2.31.1
   - bioconda::htslib=1.22.1
